--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             Object Detection Via Cocossd
         </h1>
 
-        <button class="btn" onclick="page_one();"> Identification of IMAGE</button>
+        <button class="btn" onclick="page_one();"> Identification of laptop</button>
+    <button class="btn" onclick="page_2();"> Identification of person</button>
+       <button class="btn" onclick="page_3();"> Identification of car</button>
+       <button class="btn" onclick="page_4();"> Identification of Market</button>
+      
 
     </center>
 
